--- a/src/bundles/Elsa.ServerAndStudio.Web/appsettings.json
+++ b/src/bundles/Elsa.ServerAndStudio.Web/appsettings.json
@@ -9,9 +9,21 @@
       "Microsoft.EntityFrameworkCore": "Warning",
       "Microsoft.AspNetCore": "Warning",
       "System.Net.Http": "Warning"
+    },
+    "File": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "FileName": "logs/myapp-",
+      "FileCount": "5",
+      "FileSize": "10485760"
     }
   },
   "AllowedHosts": "*",
+  "urls": "http://localhost:5001",
+  //"server.urls": "https://localhost:5002",
   "ConnectionStrings": {
     "SqlServer": "Server=.;Database=AdminNET;User=sa;Password=123456;MultipleActiveResultSets=True;trustServerCertificate=true;", //AdminNET Data 
     "RabbitMq": "rabbitmq://guest:guest@localhost:5672"
@@ -116,5 +128,15 @@
         }
       ]
     }
-  }
+  },
+  //"Kestrel": {
+  //  "Endpoints": {
+  //    "Http": {
+  //      "Url": "http://localhost:16001"
+  //    }
+  //    //"Https": {
+  //    //  "Url": "https://localhost:16001"
+  //    //}
+  //  }
+  //}
 }
